--- a/front-end/frontEnd/src/app/medicine-detail/medicine-detail.component.html
+++ b/front-end/frontEnd/src/app/medicine-detail/medicine-detail.component.html
@@ -23,24 +23,24 @@
                 <div class="email_text">
                   <div class="dtail">
                     <h2>
-                      Medicine name:{{ currentMedicineDetail.genericName }}
+                      Medicine name: {{ currentMedicineDetail.genericName }}
                     </h2>
                     <div class="form-group">
                       <label for="pharamcy name"
                         ><h3>
-                          Pharamcy:{{ currentPharmaDetail.pharmacyName }}
+                          Pharamcy: {{ currentPharmaDetail.pharmacyName }}
                         </h3></label
                       >
                       <br />
                       <label for="Drug name"
                         ><h3>
-                          Drug:{{ currentMedicineDetail.brandName }}
+                          Drug: {{ currentMedicineDetail.brandName }}
                         </h3></label
                       >
                       <br />
                       <label for=""
                         ><h3>
-                          branch num{{ currentMedicineDetail.expiryDate }}
+                          expiry date : {{ currentMedicineDetail.expiryDate }}
                         </h3></label
                       >
                     </div>
