--- a/front-end/frontEnd/src/app/about/about.component.html
+++ b/front-end/frontEnd/src/app/about/about.component.html
@@ -1,8 +1,8 @@
 <app-header></app-header>
 <section class="Eacc-section">
   <div class="Eacc__section-wrapper">
-    <p class="Eacc-intro">About Us</p>
-    <h1 class="Eacc-header">Med Hub</h1>
+    <h1 class="Companies-header">About us</h1>
+    <p>Med Hub</p>
     <p class="Eacc-description">
       The biggest motivation behind this particular project is the problems we
       observe frequently in our society: the needlessly tiresome process of
@@ -35,7 +35,7 @@
     </p>
   </div>
 </section>
-<h3 class="servics">servics</h3>
+<h1 class="Companies-header">servics</h1>
 <!-- ######## section one ends Here  #######-->
 
 <!-- ######## section two starts Here (vision and mission)  #######-->
@@ -74,8 +74,7 @@
   </div>
   <section class="Companies-section">
     <div class="Companies__section-wrapper">
-      <h1 class="Companies-header">Campanies</h1>
-      <p class="Companies-title">Working with us</p>
+      <h1 class="Companies-header">Companies</h1>
       <div class="Companies-content-flex1 basic-flex">
         <div class="Company">
           <img
