--- a/front-end/frontEnd/src/app/admin-page/add-pharmacy-form/add-pharmacy-form.component.html
+++ b/front-end/frontEnd/src/app/admin-page/add-pharmacy-form/add-pharmacy-form.component.html
@@ -44,7 +44,7 @@
                     type="number"
                     class="form-control"
                     id="validationCustom02"
-                    placeholder=""
+                    placeholder="pharma tin number"
                     required
                   />
                   <div class="valid-feedback">Looks good!</div>
