--- a/front-end/frontEnd/src/app/admin-page/admin-page.component.html
+++ b/front-end/frontEnd/src/app/admin-page/admin-page.component.html
@@ -13,7 +13,7 @@
       </div>
     </div>
     <div class="text-center">
-      <a class="btn-get-started scrollto">Get Started</a>
+      <a (click)="logout()" class="btn-get-started scrollto">logOut</a>
     </div>
 
     <div class="row icon-boxes">
@@ -58,7 +58,9 @@
       >
         <div class="icon-box">
           <div class="icon"><i class="ri-command-line"></i></div>
-          <h4 class="title"><a routerLink="/signUp">register a pharmacy</a></h4>
+          <h4 class="title">
+            <a routerLink="/addPharmacy">register a pharmacy</a>
+          </h4>
           <p class="description">
             Fill the necessary informations and register a pharmacy to the
             system
@@ -71,14 +73,14 @@
         data-aos="zoom-in"
         data-aos-delay="500"
       >
-        <div class="icon-box">
+        <!-- <div class="icon-box">
           <div class="icon"><i class="ri-fingerprint-line"></i></div>
           <h4 class="title"><a href="">Nemo Enim</a></h4>
           <p class="description">
             At vero eos et accusamus et iusto odio dignissimos ducimus qui
             blanditiis
           </p>
-        </div>
+        </div> -->
       </div>
     </div>
   </div>
