--- a/front-end/frontEnd/src/app/header/header.component.html
+++ b/front-end/frontEnd/src/app/header/header.component.html
@@ -1,12 +1,10 @@
-<header class="header">
-  <nav id="nav" class="Nav__wrapper basic-flex">
-    <div class="Nav__wrapper-logo">
-      <h1>Medhub</h1>
-    </div>
-    <ul class="unCollapsed">
-      <li><a class="nav1" routerLink="/HomeBody">Home</a></li>
-      <li><a class="nav1" routerLink="/About">About</a></li>
-      <li><a class="nav1" routerLink="/search-result">Servics</a></li>
-    </ul>
-  </nav>
-</header>
+<nav>
+  <div class="logo">
+    <a href="#">Medhub</a>
+  </div>
+  <ul class="nav-links">
+    <li><a class="nav1" routerLink="/HomeBody">Home</a></li>
+    <li><a class="nav1" routerLink="/About">About Us</a></li>
+    <li><a class="nav1" routerLink="/search-result">Pharmacies</a></li>
+  </ul>
+</nav>
