--- a/front-end/frontEnd/src/app/manager-page/manager-page.component.html
+++ b/front-end/frontEnd/src/app/manager-page/manager-page.component.html
@@ -13,7 +13,7 @@
       </div>
     </div>
     <div class="text-center">
-      <a class="btn-get-started scrollto">Get Started</a>
+      <a (click)="logout()" class="btn-get-started scrollto">log out</a>
     </div>
 
     <div class="row icon-boxes">
